# FLUENT

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION.md  KPT.md  README.md  benchmark_train.py  main.py  package-lock.json  pyproject.toml  setup_all.sh  test_mlp.py  続けて操作が必要なら教えてください
.Jules/: palette.md
.jules/: bolt.md
.zed/: settings.json
data/: config.json  dataset.json  labelset.json  model.pkl  predictions.json  survey_config.json
data/backups/: labelset-2026-05-12T04-38-39-995Z.json  labelset-2026-05-12T04-38-54-412Z.json
docs/: extractor_doc.md  main_doc.md  predict_doc.md  segmenter_doc.md  server_doc.md  train_doc.md
node/: DEVELOPMENT.md  index.html  package-lock.json  package.json  server.js  vite.config.js
node/public/: downloader.html  index.html
node/public/audio/: segments.json
node/src/: App.vue
python/: downloader_tool.py  extractor.py  generate_dummy_audio.py  normalize_existing_audio.py  predict.py  processor_tool.py  requirements.txt  segmenter.py  train.py  vad_tool.py  youtube_dl.py
python/tests/: test_extractor.py
templates/: TEMPLATES.md  package.json  template_extractor.py  template_predict.py  template_segmenter.py  template_server.js  template_train.py
templates/public/: index.html
